--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
+	implementation group: 'org.json', name: 'json', version: '20210307'
+	implementation 'com.google.code.gson:gson:2.8.7'
 }
 
 tasks.named('test') {
